Update Batch Normalization notes

--- a/Batch Normalization Notes.ipynb
+++ b/Batch Normalization Notes.ipynb
@@ -167,7 +167,74 @@
   },
   {
    "cell_type": "markdown",
-   "source": [],
+   "source": [
+    "It is computationally costly to fully standardize each layer's inputs, so batch normalization makes two simplifications. First, it standardizes each feature independently (each feature is normalized to have zero mean and unit variance.\n",
+    "\n",
+    "\\begin{equation}\n",
+    "    \\hat{x}^{(k)} = \\frac{x^{(k)} - E(x^{(k)})} {\\sqrt{ \\textrm{Var}(x^{(k)}) }}\n",
+    "\\end{equation}\n",
+    "\n",
+    "is computed over the training data set.\n",
+    "\n",
+    "The issue with this, however, is that normalizing the inputs of a layer may change what the layer can represent. For example, normalizing the inputs of a sigmoid would constrain them to the linear regime of the nonlinearity. To address, the authors introduce, for each activation $x^{(k)}$, a pair of parameters $\\gamma^{(k)}$ and $\\beta^{(k)}$ that scale and shift the normalized value:\n",
+    "\n",
+    "\\begin{equation}\n",
+    "    y^{(k)} = \\gamma^{(k)} \\hat{x}^{(k)} + \\beta^{(k)}.\n",
+    "\\end{equation}\n",
+    "\n",
+    "The $\\gamma$ and $\\beta$ parameters are learned along with the original model. In fact, if $\\gamma = \\sqrt{\\textrm{Var}(x)}$ and $\\beta = E(x)$ then you would recover the original activations."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "The second simplification is to use the training batch (used for stochastic gradient descent) for normalization. Since we are already using each mini-batch to approximate the training set, we can use each mini-batch to estimate the mean and variance of each activation. This also allows normalization to fully participate in backpropagation.\n",
+    "\n",
+    "The use of mini-batches is enabled by computation of per-dimension variances rather than joint covariances. If joint covariances were being used, regularization would be required since the mini-batch size is likely to be smaller than the number of activations, resulting in singular covariance matrices.\n",
+    "\n",
+    "**Algorithm:**\n",
+    "\n",
+    "Input: Values of $x$ over a mini-batch: $B = \\left\\{ x_1, \\dots, x_m \\right\\}$; parameters to be learned: $\\gamma,\\beta$.\n",
+    "\n",
+    "Output: $\\{ y_i = \\textrm{BN}_{\\gamma,\\beta} (x_i) \\}$\n",
+    "\n",
+    "Mini-batch mean: $\\mu_B \\leftarrow \\frac{1}{m}\\sum_{i=1}^m x_i$\n",
+    "\n",
+    "Mini-batch variance: $ \\sigma_B^2 \\leftarrow \\frac{1}{m} \\sum_{i=1}^m (x_i - \\mu_B)^2 $\n",
+    "\n",
+    "Normalize: $ \\hat{x}_i \\leftarrow \\frac{ x_i - \\mu_B }{ \\sqrt{\\sigma_B^2 + \\epsilon} }$\n",
+    "\n",
+    "Scale and shift: $ y_i \\leftarrow \\gamma \\hat{x}_i + \\beta \\equiv \\textrm{BN}_{\\gamma,\\beta}(x_i) $"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "During training, it will be necessary to backpropagate the gradient of the loss, $\\ell$, through the batch normalization transform and compute the gradients with respect to the parameters of the BN transform. Using the chain rule, we get:\n",
+    "\n",
+    "\\begin{equation}\n",
+    "    \\frac{\\partial \\ell}{\\partial \\hat{x}_i} = \\frac{\\partial \\ell}{\\partial y_i} \\cdot \\gamma\\\\\n",
+    "    \\frac{\\partial\\ell}{\\partial \\sigma_B^2} = \\sum_{i=1}^m \\frac{\\partial\\ell}{\\partial \\hat{x}_i} \\cdot\n",
+    "    \\left( x_i - \\mu_B \\right) \\cdot \\frac{-1}{2} \\left(\\sigma_B^2 + \\epsilon\\right)^{-3/2}\\\\\n",
+    "    \\frac{\\partial\\ell}{\\partial\\mu_B} = \\sum_{i=1}^m \\frac{\\partial\\ell}{\\partial\\hat{x}_i} \\cdot\n",
+    "    \\frac{-1}{\\sqrt{ \\sigma_B^2 + \\epsilon }}\\\\\n",
+    "    \\frac{\\partial\\ell}{\\partial x_i} = \\frac{\\partial\\ell}{\\partial \\hat{x}_i} \\cdot\n",
+    "    \\frac{1}{\\sqrt{ \\sigma_B^2 + \\epsilon }} + \\frac{\\partial\\ell}{\\partial\\sigma_B^2} \\cdot\n",
+    "    \\frac{2 (x_i - \\mu_B)}{m} + \\frac{\\partial\\ell}{\\partial\\mu_B} \\cdot \\frac{1}{m}\n",
+    "\\end{equation}\n"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
