--- a/Batch Normalization Notes.ipynb
+++ b/Batch Normalization Notes.ipynb
@@ -168,7 +168,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "It is computationally costly to fully standardize each layer's inputs, so batch normalization makes two simplifications. First, it standardizes each feature independently (each feature is normalized to have zero mean and unit variance.\n",
+    "It is computationally costly to fully standardize each layer's inputs (with respect to the full training set), so batch normalization makes two simplifications. First, it standardizes each feature independently (each feature is normalized to have zero mean and unit variance.\n",
     "\n",
     "\\begin{equation}\n",
     "    \\hat{x}^{(k)} = \\frac{x^{(k)} - E(x^{(k)})} {\\sqrt{ \\textrm{Var}(x^{(k)}) }}\n",
@@ -232,8 +232,65 @@
     "    \\frac{-1}{\\sqrt{ \\sigma_B^2 + \\epsilon }}\\\\\n",
     "    \\frac{\\partial\\ell}{\\partial x_i} = \\frac{\\partial\\ell}{\\partial \\hat{x}_i} \\cdot\n",
     "    \\frac{1}{\\sqrt{ \\sigma_B^2 + \\epsilon }} + \\frac{\\partial\\ell}{\\partial\\sigma_B^2} \\cdot\n",
-    "    \\frac{2 (x_i - \\mu_B)}{m} + \\frac{\\partial\\ell}{\\partial\\mu_B} \\cdot \\frac{1}{m}\n",
-    "\\end{equation}\n"
+    "    \\frac{2 (x_i - \\mu_B)}{m} + \\frac{\\partial\\ell}{\\partial\\mu_B} \\cdot \\frac{1}{m}\\\\\n",
+    "    \\frac{\\partial\\ell}{\\partial\\gamma} = \\sum_{i=1}^m \\frac{\\partial\\ell}{\\partial y_i} \\cdot \\hat{x}_i\\\\\n",
+    "    \\frac{\\partial\\ell}{\\partial\\beta} = \\sum_{i=1}^m \\frac{\\partial\\ell}{\\partial y_i}\n",
+    "\\end{equation}"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 3.1 Train and Inference with Batch-Normalized Networks\n",
+    "\n",
+    "To **Batch-Normalize** a network, a BN layer is inserted. A layer that previously received $x$ as the input, now receives $BN(x) = \\gamma\\hat{x} + \\beta$.\n",
+    "\n",
+    "Batch Normalization can be used with batch gradient descent, SGD with size $m>1$, or variants such as Adagrad.\n",
+    "\n",
+    "Normalizing based on the mini-batch is efficient for training, but is not desirable for inference. Once the network has been trained, we use the normalization\n",
+    "\\begin{equation}\n",
+    "    \\hat{x} = \\frac{x - E(x)}{\\sqrt{x} + \\epsilon},\n",
+    "\\end{equation}\n",
+    "using the population instead of the mini-batches, for inference."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "---\n",
+    "# Outline for presentation"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "- Intro\n",
+    "- Normalization\n",
+    "  - How does it work?\n",
+    "  - What is the problem with just input normalization?\n",
+    "- Batch Normalization\n",
+    "  - The intuition leading to it\n",
+    "  - How does it work?\n",
+    "  - How is it implemented?\n",
+    "- Example showing performance improvements\n"
    ],
    "metadata": {
     "collapsed": false,
