--- a/Presentation Notes.ipynb
+++ b/Presentation Notes.ipynb
@@ -97,7 +97,42 @@
     "### Solving overfitting\n",
     "\n",
     "- Data augmentation\n",
-    "- Dropout\n"
+    "- Dropout"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "---\n",
+    "## September 23\n",
+    "## Going Deeper with CNNs (GoogLeNet)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "The key insight is that they use 1x1 convolutional filters to flatten the channels. This makes using more filter types (1x1, 3x3, and 5x5 simultaneously) and more layers computationally feasible.\n",
+    "\n",
+    "- Each \"layer\" of the network has four parallel streams:\n",
+    "  -1x1 conv\n",
+    "  - 1x1 conv -> 3x3 conv\n",
+    "  - 1x1 conv -> 5x5 conv\n",
+    "  - 3x3 max pool -> 1x1 conv\n",
+    "- The outputs of these filters are then concatenated to form the layer output\n",
+    "\n",
+    "They called these \"Inception\" layers after the movie.\n"
    ],
    "metadata": {
     "collapsed": false,
