Update presentation notes

--- a/Batch Normalization Notes.ipynb
+++ b/Batch Normalization Notes.ipynb
@@ -269,6 +269,178 @@
   {
    "cell_type": "markdown",
    "source": [
+    "### 3.2 Batch-Normalized Convolutional Networks\n",
+    "\n",
+    "This works for both convolutional and fully connected layers. Add the BN transform immediately before the nonlinearity by normalizing $x = Wu + b$.\n",
+    "\n",
+    "For convolutional layers, we additionally want the normalization to obey the convolutional property - so that different elements of the same feature map, at different locations, are normalized in the same way. To achieve this, we jointly normalize all the activations in a mini-batch, over all locations.\n",
+    "\n",
+    "During inference, the BN transform applies the same linear transformation to each activation in a given feature map."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Batch Normalization enables higher learning rates\n",
+    "\n",
+    "In non-BN networks, too high a learning rate may result in exploding or vanishing gradients or getting stuck in poor local minima. BN helps address this since BN prevents small changes in layer parameters from amplifying as the data propagates.\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 4. Experiments\n",
+    "### 4.1 Activations over time\n",
+    "\n",
+    "To verify they tested on MNIST with a simple network:\n",
+    "- Input layer (28x28 binary images)\n",
+    "- 3 fully connected layers with 100 activations (neurons)\n",
+    "  - Each layer computes $y = g(Wu + b)$ with sigmoid nonlinearity and $W$ initalized to small random Gaussian values\n",
+    "- Fully connected layer with 10 neurons (one per class)\n",
+    "- Uses cross-entropy loss\n",
+    "- Added BN to each hidden layer of the network for testing"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 4.2 ImageNet classification\n",
+    "\n",
+    "Applied BN to a new variant of Inception network (GoogLeNet) trained on the ImageNet classification task.\n",
+    "- Large number of convolutional and pooling layers\n",
+    "- Softmax layer to predict the image class out of 1000 possibilities\n",
+    "- Conv layers use ReLU\n",
+    "- Main difference to the original version is that the $5\\times5$ layers were replaced by two consecutive layers of $3\\times3$ convolutions with up to 128 filters.\n",
+    "- Contains $13.6\\times 10^6$ (13 million) parameters\n",
+    "- Only the softmax layer is fully connected\n",
+    "- BN applied to the input of each nonlinearity in a convolutional way\n",
+    "\n",
+    "#### 4.2.1 Accelerating BN Networks\n",
+    "In order to fully tack advantage of BN they used the following modifications:\n",
+    "- Increased learning rate\n",
+    "- Remove dropout\n",
+    "  - Authors conjecture that BN provides similar regularization benefits as Dropout\n",
+    "- Shuffle training examples more thoroughly\n",
+    "  - This is to make sure that different mini-batches have as little overlap as possible\n",
+    "- Reduce $L_2$ weight regularization\n",
+    "- Accelerate the learning rate decay\n",
+    "  - Since network trains faster, it was necessary to increase learning rate\n",
+    "- Remove Local Response Normalization\n",
+    "- Reduce the photometric distortions\n",
+    "  - I believe they are referring to images distorted for data augmentation purposes\n",
+    "  - Since training happens faster, they want to let the trainer focus on more \"real\" images"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### 4.2.2 Single-Network Classification\n",
+    "\n",
+    "They tested it by training various architectures on the LSVRC2012 training data and tested on the validation data. The architectures tested were:\n",
+    "\n",
+    "- **Inception**\n",
+    "  - the modified version described before\n",
+    "  - Initial learning rate of 0.0015\n",
+    "- **BN-Baseline**\n",
+    "  - Inception + BN before each nonlinearity\n",
+    "- **BN-x5**\n",
+    "  - Inception + BN + modifications from 4.2.1\n",
+    "  - Initial learning rate is 5x greater at 0.0075\n",
+    "  - Using this new learning rate with original Inception cause model parameters to reach machine infinity\n",
+    "- **BN-x30**\n",
+    "  - Like BN-x5, but with initial learning rate of 0.045 (30x that of Inception)\n",
+    "- **BN-x5-Sigmoid**\n",
+    "  - Like BN-x5, but with sigmoid nonlinearity instead of ReLU\n",
+    "  - Using sigmoid with original Inception cuases it's accuracy to be equivalent to chance.\n",
+    "  -\n",
+    "\n",
+    "**Include figs 2, 3 from paper**"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### 4.2.3 Ensemble Classification\n",
+    "\n",
+    "Also tested using ensemble models. The previous best top-5 error was 4.94% reported by He et al. Using an ensemble of BN networks, the authors were able to beat the then best score on ILSVRC2012 with a score of 4.82%.\n",
+    "\n",
+    "The modifications were as follows:\n",
+    "- 6 networks each based on BN-x30\n",
+    "- Increased initial weights in conv layers\n",
+    "- Used Dropout (probability of 5% or 10% vs 40% for original Inception)\n",
+    "- Used non-conv BN with last hidden layers of each model\n",
+    "\n",
+    "Each network took about $6\\times 10^6$ training steps to achieve max accuracy.\n",
+    "\n",
+    "**Include fig 4 from paper**\n",
+    "\n",
+    "I don't know what the differences are between all of the architectures. Let's just allow this to be another piece of validation."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 5. Conclusion\n",
+    "\n",
+    "- BN is a novel mechanism for dramatically accelerating training.\n",
+    "- Covariate shift is known to complicate training\n",
+    "  - This also applies to sub-networks and layers\n",
+    "- Normalizing the input aids in training\n",
+    "  - $\\Rightarrow$ Normalizing at internal activations should aid in training as well\n",
+    "- Networks are typically trained with some form of stochastic optimization\n",
+    "  - $\\Rightarrow$ perform normalization for each mini-batch and backpropagate gradients through normalization parameters\n",
+    "- BN adds only two extra parameters per activation\n",
+    "- Allows the use of saturating nonlinearities\n",
+    "- Makes networks more tolerant to increased training rates\n",
+    "- Often negates need for Dropout for regularization\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "---\n",
     "# Outline for presentation"
    ],
@@ -290,7 +462,10 @@
     "  - The intuition leading to it\n",
     "  - How does it work?\n",
     "  - How is it implemented?\n",
-    "- Example showing performance improvements\n"
+    "- Example showing performance improvements\n",
+    "  - Basic nueral net (not a CNN)\n",
+    "  - ImageNet\n",
+    "  - Ensemble Classification\n"
    ],
    "metadata": {
     "collapsed": false,
