Update presentation notes

--- a/Presentation Notes.ipynb
+++ b/Presentation Notes.ipynb
@@ -16,7 +16,7 @@
    "cell_type": "markdown",
    "source": [
     "---\n",
-    "## Sep 21\n",
+    "# September 21\n",
     "\n",
     "## ImageNet Classification with Deep Convolutional Neural Networks\n",
     "https://proceedings.neurips.cc/paper/2012/file/c399862d3b9d6b76c8436e924a68c45b-Paper.pdf"
@@ -110,7 +110,7 @@
    "cell_type": "markdown",
    "source": [
     "---\n",
-    "## September 23\n",
+    "# September 23\n",
     "## Going Deeper with CNNs (GoogLeNet)"
    ],
    "metadata": {
@@ -132,7 +132,205 @@
     "  - 3x3 max pool -> 1x1 conv\n",
     "- The outputs of these filters are then concatenated to form the layer output\n",
     "\n",
-    "They called these \"Inception\" layers after the movie.\n"
+    "They called these \"Inception\" layers after the movie."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "---\n",
+    "# September 28\n",
+    "## Deep Inside Convolutional Networks: Visualizing Image Classification Models and Saliency Maps"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "What is the model looking at?\n",
+    "\n",
+    "- Use numerical optimization of images to visualize ConvNet models\n",
+    "- Saliency map\n",
+    "- Use gradient-based visualization method"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Class Model Visualization - MAP\n",
+    "\n",
+    "Idea: Trained classification CNN to produce an image\n",
+    "\n",
+    "Technique: Numerically generate image representative of the class in terms of score.\n",
+    "\n",
+    "\\begin{equation}\n",
+    "  \\textrm{argmax}_l S_c(I) - \\lambda\n",
+    "\\end{equation}\n",
+    "\n",
+    "$S_c(I)$ - score of class $c$, computed by classification layer of ConvNet"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Saliency Maps - Spatial Support\n",
+    "\n",
+    "**Idea:** Create an image which ranks the pixels of $I_0$ based on influence on the score $S_c(I)$."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "---\n",
+    "# Oct 5 - Group Normalization"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "- Many people dislike BN / are confused by it\n",
+    "- BN is dependent on batch size\n",
+    "- BN is not good for online/microbatch training\n",
+    "- There is a discrepancy between training and testing for BN"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Ghost Batch Normalization was a first attempt to address BN issues.\n",
+    "\n",
+    "Layer Normalization\n",
+    "- Normalize the activations within each layer\n",
+    "- Used on some NLP tasks\n",
+    "\n",
+    "Instance Normalization\n",
+    "- Similar to layer norm, but just for one channel"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Group Normalization\n",
+    "\n",
+    "Def - Normalize within each group of channels\n",
+    "\n",
+    "There is a `tfa.layers.GroupNormalization` layer in Tensorflow.\n",
+    "\n",
+    "In practice, GN performs worse than BN. => Add weight standardization when batch size is large."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# ADAM: Adaptive Moment Estimation"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Optimization vs regularization\n",
+    "\n",
+    "- Regularization focuses on reducing the test or generalization error without affecting the initial training error\n",
+    "- Optimizations focuses on reducing training time\n",
+    "  - Gradient descent\n",
+    "  - SGD"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Derived from:\n",
+    "- RSMProp - RMS propagation\n",
+    "- AdaGrad - Uses the second moment with no decay to deal with parse features\n",
+    "\n",
+    "Typically outperforms other optimizers and works well in most cases whereas most other optimizers have situations where they don't perform well at all.\n",
+    "\n",
+    "Advantages:\n",
+    "- Magnitudes of parameters updates are invariant to rescaling of gradient\n",
+    "- Step sizes are approximately bounded by the step size hyperparamter; does not require a stationary objective\n",
+    "- Works with sparse gradients\n",
+    "- Naturally performs a form of step size annealing"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Conclusion\n",
+    "- Combines abilities of AdaGrad and RMSProp\n",
+    "- Smal memory requirements\n",
+    "- Tends to converge fast\n",
+    "- Robust and useful in a wide range of problems\n"
    ],
    "metadata": {
     "collapsed": false,
