--- a/Presentation Notes.ipynb
+++ b/Presentation Notes.ipynb
@@ -275,6 +275,8 @@
   {
    "cell_type": "markdown",
    "source": [
+    "---\n",
+    "# October 7\n",
     "# ADAM: Adaptive Moment Estimation"
    ],
    "metadata": {
@@ -330,7 +332,49 @@
     "- Combines abilities of AdaGrad and RMSProp\n",
     "- Smal memory requirements\n",
     "- Tends to converge fast\n",
-    "- Robust and useful in a wide range of problems\n"
+    "- Robust and useful in a wide range of problems"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Deep Residual Learning for Image Recognition (ResNet)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Is improving network performance as simple as adding more layers?\n",
+    "- Not really. Simply adding more layers does not generally improve performance.\n",
+    "\n",
+    "Solution: instead of just stacking layers, re-add the identity every few layers"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "---\n",
+    "# October 12\n",
+    "\n",
+    "#\n"
    ],
    "metadata": {
     "collapsed": false,
