--- a/Presentation Notes.ipynb
+++ b/Presentation Notes.ipynb
@@ -374,7 +374,23 @@
     "---\n",
     "# October 12\n",
     "\n",
-    "#\n"
+    "# Mixed-Example Data Augmentation"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Use soft labels with combined images\n",
+    "\n",
+    "The main idea is to combine two images linearly and use soft labels (non-label-preserving augmentation). I.e., cat image + alpaca image => label becomes 0.3 cat and 0.7 alpaca, etc.\n",
+    "\n",
+    "You can also consider this from a non-linear perspective. E.g., to take the top half of one image and concatenate it with the bottom half of another image. From there you can make even more complicated mixtures.\n"
    ],
    "metadata": {
     "collapsed": false,
