--- a/Presentation Notes.ipynb
+++ b/Presentation Notes.ipynb
@@ -390,7 +390,74 @@
     "\n",
     "The main idea is to combine two images linearly and use soft labels (non-label-preserving augmentation). I.e., cat image + alpaca image => label becomes 0.3 cat and 0.7 alpaca, etc.\n",
     "\n",
-    "You can also consider this from a non-linear perspective. E.g., to take the top half of one image and concatenate it with the bottom half of another image. From there you can make even more complicated mixtures.\n"
+    "You can also consider this from a non-linear perspective. E.g., to take the top half of one image and concatenate it with the bottom half of another image. From there you can make even more complicated mixtures."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "---\n",
+    "# October 14\n",
+    "\n",
+    "# How transferable are features in deep neural networks?\n",
+    "\n",
+    "## Transfer Learning\n",
+    "- Use with similar kind of datasets\n",
+    "- Reduce the computation => saving memory and time\n",
+    "- A good approach to solve problems with a small sample size (small training set)\n",
+    "\n",
+    "## Two kinds:\n",
+    "- Frozen\n",
+    "  - The weights in the transferred layers are kept stable\n",
+    "- Unfrozen\n",
+    "  - The weights in the transferred layers are allowed to be updated"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Big Transfer (BiT)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "What is transfer learning?\n",
+    "\n",
+    "- Pre-training (upstream task)\n",
+    "  - Train a model on a larger, more general dataset for transfer\n",
+    "- Fine-tuning (downstream task)\n",
+    "  - Do final training on small dataset"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "BiT is a pre-training ResNet that can be used as a starting point for any visual task.\n"
    ],
    "metadata": {
     "collapsed": false,
