--- a/Final Project/CSC581B_FinalProject.ipynb
+++ b/Final Project/CSC581B_FinalProject.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "CSC581B_FinalProject.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMV6QEoDDUPzzvcDojLQA29",
+      "authorship_tag": "ABX9TyOW2jDDc1fuI2AZsy4JI0qX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,7 +24,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/malloyca/CSC581B/blob/main/CSC581B_FinalProject.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/malloyca/CSC581B/blob/main/Final%20Project/CSC581B_FinalProject.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -42,6 +42,7 @@
         "id": "E2f_DXB6Po_w"
       },
       "source": [
+        "import numpy as np\n",
         "import torch"
       ],
       "execution_count": 1,
