Fix early stopping bug

--- a/Final Project/linear_model.ipynb
+++ b/Final Project/linear_model.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "linear_model.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOdXGkfS1g4AnLP4W15pMZ0",
+      "authorship_tag": "ABX9TyM+2JviUNIj7prd1rKgs7KC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,7 +53,7 @@
         "import matplotlib.pyplot as plt\n",
         "import copy"
       ],
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -91,7 +91,7 @@
         "    transform = ToTensor()\n",
         ")"
       ],
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -115,7 +115,7 @@
         "train_dataloader = DataLoader(training_data, batch_size=batch_size)\n",
         "test_dataloader = DataLoader(test_data, batch_size=batch_size)"
       ],
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -134,7 +134,7 @@
         "  print(\"Shape of y batch: \", y.shape, y.dtype)\n",
         "  break"
       ],
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -168,7 +168,7 @@
         "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
         "print(device)"
       ],
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -204,17 +204,17 @@
         "    x = self.linear_model(x)\n",
         "    return x"
       ],
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "AjdHv7tMcmhy",
-        "outputId": "60ef5659-d977-4b17-c94e-bd3066d29320",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "60ef5659-d977-4b17-c94e-bd3066d29320"
       },
       "source": [
         "model_100 = LinearModel(n_neurons=100).to(device)\n",
@@ -229,7 +229,7 @@
         "model_5000 = LinearModel(n_neurons=5000).to(device)\n",
         "print(model_5000)"
       ],
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -286,7 +286,7 @@
         "optimizer_1000 = torch.optim.SGD(model_1000.parameters(), lr=1e-2)\n",
         "optimizer_5000 = torch.optim.SGD(model_5000.parameters(), lr=1e-2)"
       ],
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -315,7 +315,7 @@
         "      loss, current = loss.item(), batch * len(X)\n",
         "      print(f\"loss: {loss:>7f} [{current:>5d}/{size:>5d}]\")"
       ],
-      "execution_count": 94,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -341,7 +341,7 @@
         "  print(f\"Test Error: \\n Accuracy: {(100*correct):>0.1f}%, Avg loss: {test_loss:>8f} \\n\")\n",
         "  return test_loss"
       ],
-      "execution_count": 95,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -352,7 +352,7 @@
       "source": [
         "n_epochs = 250"
       ],
-      "execution_count": 96,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -399,31 +399,32 @@
         "      # If patience limit reached, store model and break the loop\n",
         "      else:\n",
         "        print(\"Finished due to early stopping.\")\n",
-        "        print(f\"Saving best model: {model.name}-epoch:{best_epoch:03d}\")\n",
-        "        torch.save(best_model_state_dict, f'{model.name}-epoch:{best_epoch:03d}')\n",
+        "        print(f\"Saving best model: {model.name}_epoch-{best_epoch:03d}\")\n",
+        "        torch.save(best_model_state_dict, f'{model.name}_epoch-{best_epoch:03d}')\n",
         "        break\n",
         "\n",
         "  # If we get here, we did not stop early - save best model\n",
-        "  print(f\"Saving best model: {model.name}-epoch:{best_epoch:03d}\")\n",
-        "  torch.save(best_model_state_dict, f'{model.name}-epoch:{best_epoch:03d}')\n"
+        "  if early_stopping:\n",
+        "    print(f\"Saving best model: {model.name}-epoch:{best_epoch:03d}\")\n",
+        "    torch.save(best_model_state_dict, f'{model.name}-epoch:{best_epoch:03d}')\n"
       ],
-      "execution_count": 97,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "OlN7IdWWlXCK",
-        "outputId": "380281a2-c410-4a2d-cbf1-1fcae8afeb71",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "380281a2-c410-4a2d-cbf1-1fcae8afeb71"
       },
       "source": [
         "training_loop(n_epochs, model_100, train_dataloader, test_dataloader,\n",
         "              loss_fn, optimizer_100, early_stopping=True, patience=10)"
       ],
-      "execution_count": 98,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
