Update architecture notes

--- a/Final Project/small_convnet.ipynb
+++ b/Final Project/small_convnet.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "small_convnet.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNPgMElGQjouGovjiqT4pv9",
+      "authorship_tag": "ABX9TyNAAKWkfghJyLlwiT+8xn+/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2230,12 +2230,21 @@
         "id": "53YZcWbELoEm"
       },
       "source": [
-        "## Six layer model\n",
+        "## Six layer model (current best)\n",
         "- Test accuracy: 72.7%\n",
         "- Avg loss: 1.733851\n",
         "\n",
         "Architecture:\n",
-        "- "
+        "- 32 x 32 x 3 conv, ReLU - (3,3), 256\n",
+        "- Maxpool (2,2)\n",
+        "- 16 x 16 x 256 conv, ReLU - (3,3), 128\n",
+        "- Maxpool (2,2)\n",
+        "- 8 x 8 x 128 conv, ReLU - (3,3), 64\n",
+        "- Maxpool (2,2)\n",
+        "- 4 x 4 x 64 conv, ReLU - (3,3), 32\n",
+        "- 4 x 4 x 32 conv, ReLU - (3,3), 16\n",
+        "- Flatten\n",
+        "- Fully connect layer (256, 10)"
       ]
     },
     {
