--- a/Final Project/linear_model.ipynb
+++ b/Final Project/linear_model.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "linear_model.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO/TI1M+H6sR9cu6zh40Nso",
+      "authorship_tag": "ABX9TyN4gztGNq4YrJSyFzl4qDYv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -570,11 +570,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "DvwjwC3Rv8_X",
-        "outputId": "b608aa3f-9592-47f1-fe78-145df6db8b5c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "DvwjwC3Rv8_X",
+        "outputId": "b608aa3f-9592-47f1-fe78-145df6db8b5c"
       },
       "source": [
         "# Check that there are 100 instances of each class in the validation set\n",
@@ -646,7 +646,7 @@
         "        nn.Linear(32*32*3, n_neurons),\n",
         "        nn.Linear(n_neurons, n_neurons),\n",
         "        nn.Linear(n_neurons, 100),\n",
-        "        nn.Softmax(dim=1)\n",
+        "        # nn.Softmax(dim=1) # todo - get rid of this?\n",
         "    )\n",
         "\n",
         "  # Forward propagation function\n",
@@ -1087,10 +1087,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "EARFi7nyCjOP",
-        "outputId": "f46bf60e-e880-4691-f7d4-43b79eceed57",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f46bf60e-e880-4691-f7d4-43b79eceed57"
       },
       "source": [
         "training_loop(n_epochs, model_1000, train_dataloader, test_dataloader,\n",
