--- a/Final Project/small_convnet.ipynb
+++ b/Final Project/small_convnet.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "small_convnet.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNAAKWkfghJyLlwiT+8xn+/",
+      "authorship_tag": "ABX9TyPD4djDbWZLuo2nr5P1FgPG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -389,7 +389,7 @@
         "import matplotlib.pyplot as plt\n",
         "import copy"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -432,7 +432,7 @@
         "    transform = ToTensor()\n",
         ")"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -477,7 +477,7 @@
         "train_dataloader = DataLoader(training_data, batch_size=batch_size)\n",
         "test_dataloader = DataLoader(test_data, batch_size=batch_size)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -496,7 +496,7 @@
         "  print(\"Shape of y batch: \", y.shape, y.dtype)\n",
         "  break"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -530,7 +530,7 @@
         "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
         "print(device)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -586,20 +586,18 @@
         "        #nn.ReLU(),\n",
         "        #nn.MaxPool2d((2,2)),\n",
         "\n",
-        "        # Output layer\n",
+        "        # Output layer # todo - move the flatten -> linear layer out of sequential\n",
         "        nn.Flatten(),\n",
         "        nn.Linear(16 * 4 * 4, 10),\n",
         "    )\n",
-        "    self.softmax = nn.Softmax(dim=1)\n",
         "\n",
         "  # Forward propagation\n",
         "  def forward(self, x):\n",
         "    x = self.basic_conv_net(x)\n",
-        "    x = self.softmax(x)\n",
         "    return x\n",
         "      "
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -610,7 +608,7 @@
       "source": [
         "model = basicConvNet('test').to(device)"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -625,7 +623,7 @@
         "# Optimizer\n",
         "optimizer = torch.optim.SGD(model.parameters(), lr=5e-2)"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -654,7 +652,7 @@
         "      loss, current = loss.item(), batch * len(X)\n",
         "      print(f\"loss: {loss:>7f} [{current:>5d}/{size:>5d}]\")"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -680,7 +678,7 @@
         "  print(f\"Test Error: \\n Accuracy: {(100*correct):>0.1f}%, Avg loss: {test_loss:>8f} \\n\")\n",
         "  return test_loss"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -691,7 +689,7 @@
       "source": [
         "n_epochs = 100"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -747,7 +745,7 @@
         "    print(f\"Saving best model: {model.name}_epoch-{best_epoch:03d}\")\n",
         "    torch.save(best_model_state_dict, f'{model.name}_epoch-{best_epoch:03d}')"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -763,7 +761,7 @@
         "training_loop(n_epochs, model, train_dataloader, test_dataloader, loss_fn,\n",
         "              optimizer, early_stopping=True)"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
