--- a/Final Project/linear_model.ipynb
+++ b/Final Project/linear_model.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "linear_model.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN4gztGNq4YrJSyFzl4qDYv",
+      "authorship_tag": "ABX9TyOdcS2woozzKESJmY3cZ94A",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -14,353 +14,6 @@
     },
     "language_info": {
       "name": "python"
-    },
-    "accelerator": "GPU",
-    "widgets": {
-      "application/vnd.jupyter.widget-state+json": {
-        "f028bdb354b54e06b2641871ae7dabd4": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "HBoxModel",
-          "model_module_version": "1.5.0",
-          "state": {
-            "_view_name": "HBoxView",
-            "_dom_classes": [],
-            "_model_name": "HBoxModel",
-            "_view_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "_view_count": null,
-            "_view_module_version": "1.5.0",
-            "box_style": "",
-            "layout": "IPY_MODEL_da3a981a9e4246f999b4900d346a3c42",
-            "_model_module": "@jupyter-widgets/controls",
-            "children": [
-              "IPY_MODEL_1da3485b610b4a4288dcaac34b3a7f8e",
-              "IPY_MODEL_de66f70715914c77bed0fe546273472d",
-              "IPY_MODEL_513d85614c58494caa75524d4a30dd9e"
-            ]
-          }
-        },
-        "da3a981a9e4246f999b4900d346a3c42": {
-          "model_module": "@jupyter-widgets/base",
-          "model_name": "LayoutModel",
-          "model_module_version": "1.2.0",
-          "state": {
-            "_view_name": "LayoutView",
-            "grid_template_rows": null,
-            "right": null,
-            "justify_content": null,
-            "_view_module": "@jupyter-widgets/base",
-            "overflow": null,
-            "_model_module_version": "1.2.0",
-            "_view_count": null,
-            "flex_flow": null,
-            "width": null,
-            "min_width": null,
-            "border": null,
-            "align_items": null,
-            "bottom": null,
-            "_model_module": "@jupyter-widgets/base",
-            "top": null,
-            "grid_column": null,
-            "overflow_y": null,
-            "overflow_x": null,
-            "grid_auto_flow": null,
-            "grid_area": null,
-            "grid_template_columns": null,
-            "flex": null,
-            "_model_name": "LayoutModel",
-            "justify_items": null,
-            "grid_row": null,
-            "max_height": null,
-            "align_content": null,
-            "visibility": null,
-            "align_self": null,
-            "height": null,
-            "min_height": null,
-            "padding": null,
-            "grid_auto_rows": null,
-            "grid_gap": null,
-            "max_width": null,
-            "order": null,
-            "_view_module_version": "1.2.0",
-            "grid_template_areas": null,
-            "object_position": null,
-            "object_fit": null,
-            "grid_auto_columns": null,
-            "margin": null,
-            "display": null,
-            "left": null
-          }
-        },
-        "1da3485b610b4a4288dcaac34b3a7f8e": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "HTMLModel",
-          "model_module_version": "1.5.0",
-          "state": {
-            "_view_name": "HTMLView",
-            "style": "IPY_MODEL_63c1746f51df4b09b1df859b0039dd02",
-            "_dom_classes": [],
-            "description": "",
-            "_model_name": "HTMLModel",
-            "placeholder": "​",
-            "_view_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "value": "",
-            "_view_count": null,
-            "_view_module_version": "1.5.0",
-            "description_tooltip": null,
-            "_model_module": "@jupyter-widgets/controls",
-            "layout": "IPY_MODEL_7ab78805f1074cfa83a0035d52c874c9"
-          }
-        },
-        "de66f70715914c77bed0fe546273472d": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "FloatProgressModel",
-          "model_module_version": "1.5.0",
-          "state": {
-            "_view_name": "ProgressView",
-            "style": "IPY_MODEL_4e219f163d804715b6dc838b77867d06",
-            "_dom_classes": [],
-            "description": "",
-            "_model_name": "FloatProgressModel",
-            "bar_style": "success",
-            "max": 169001437,
-            "_view_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "value": 169001437,
-            "_view_count": null,
-            "_view_module_version": "1.5.0",
-            "orientation": "horizontal",
-            "min": 0,
-            "description_tooltip": null,
-            "_model_module": "@jupyter-widgets/controls",
-            "layout": "IPY_MODEL_df2becea944147749078c6257977018b"
-          }
-        },
-        "513d85614c58494caa75524d4a30dd9e": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "HTMLModel",
-          "model_module_version": "1.5.0",
-          "state": {
-            "_view_name": "HTMLView",
-            "style": "IPY_MODEL_1eede6c9a1f34d4187e90dbf79da4122",
-            "_dom_classes": [],
-            "description": "",
-            "_model_name": "HTMLModel",
-            "placeholder": "​",
-            "_view_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "value": " 169001984/? [00:06&lt;00:00, 28983610.40it/s]",
-            "_view_count": null,
-            "_view_module_version": "1.5.0",
-            "description_tooltip": null,
-            "_model_module": "@jupyter-widgets/controls",
-            "layout": "IPY_MODEL_e66e18de1f3f49a4b3bdb05a9565daa2"
-          }
-        },
-        "63c1746f51df4b09b1df859b0039dd02": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "DescriptionStyleModel",
-          "model_module_version": "1.5.0",
-          "state": {
-            "_view_name": "StyleView",
-            "_model_name": "DescriptionStyleModel",
-            "description_width": "",
-            "_view_module": "@jupyter-widgets/base",
-            "_model_module_version": "1.5.0",
-            "_view_count": null,
-            "_view_module_version": "1.2.0",
-            "_model_module": "@jupyter-widgets/controls"
-          }
-        },
-        "7ab78805f1074cfa83a0035d52c874c9": {
-          "model_module": "@jupyter-widgets/base",
-          "model_name": "LayoutModel",
-          "model_module_version": "1.2.0",
-          "state": {
-            "_view_name": "LayoutView",
-            "grid_template_rows": null,
-            "right": null,
-            "justify_content": null,
-            "_view_module": "@jupyter-widgets/base",
-            "overflow": null,
-            "_model_module_version": "1.2.0",
-            "_view_count": null,
-            "flex_flow": null,
-            "width": null,
-            "min_width": null,
-            "border": null,
-            "align_items": null,
-            "bottom": null,
-            "_model_module": "@jupyter-widgets/base",
-            "top": null,
-            "grid_column": null,
-            "overflow_y": null,
-            "overflow_x": null,
-            "grid_auto_flow": null,
-            "grid_area": null,
-            "grid_template_columns": null,
-            "flex": null,
-            "_model_name": "LayoutModel",
-            "justify_items": null,
-            "grid_row": null,
-            "max_height": null,
-            "align_content": null,
-            "visibility": null,
-            "align_self": null,
-            "height": null,
-            "min_height": null,
-            "padding": null,
-            "grid_auto_rows": null,
-            "grid_gap": null,
-            "max_width": null,
-            "order": null,
-            "_view_module_version": "1.2.0",
-            "grid_template_areas": null,
-            "object_position": null,
-            "object_fit": null,
-            "grid_auto_columns": null,
-            "margin": null,
-            "display": null,
-            "left": null
-          }
-        },
-        "4e219f163d804715b6dc838b77867d06": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "ProgressStyleModel",
-          "model_module_version": "1.5.0",
-          "state": {
-            "_view_name": "StyleView",
-            "_model_name": "ProgressStyleModel",
-            "description_width": "",
-            "_view_module": "@jupyter-widgets/base",
-            "_model_module_version": "1.5.0",
-            "_view_count": null,
-            "_view_module_version": "1.2.0",
-            "bar_color": null,
-            "_model_module": "@jupyter-widgets/controls"
-          }
-        },
-        "df2becea944147749078c6257977018b": {
-          "model_module": "@jupyter-widgets/base",
-          "model_name": "LayoutModel",
-          "model_module_version": "1.2.0",
-          "state": {
-            "_view_name": "LayoutView",
-            "grid_template_rows": null,
-            "right": null,
-            "justify_content": null,
-            "_view_module": "@jupyter-widgets/base",
-            "overflow": null,
-            "_model_module_version": "1.2.0",
-            "_view_count": null,
-            "flex_flow": null,
-            "width": null,
-            "min_width": null,
-            "border": null,
-            "align_items": null,
-            "bottom": null,
-            "_model_module": "@jupyter-widgets/base",
-            "top": null,
-            "grid_column": null,
-            "overflow_y": null,
-            "overflow_x": null,
-            "grid_auto_flow": null,
-            "grid_area": null,
-            "grid_template_columns": null,
-            "flex": null,
-            "_model_name": "LayoutModel",
-            "justify_items": null,
-            "grid_row": null,
-            "max_height": null,
-            "align_content": null,
-            "visibility": null,
-            "align_self": null,
-            "height": null,
-            "min_height": null,
-            "padding": null,
-            "grid_auto_rows": null,
-            "grid_gap": null,
-            "max_width": null,
-            "order": null,
-            "_view_module_version": "1.2.0",
-            "grid_template_areas": null,
-            "object_position": null,
-            "object_fit": null,
-            "grid_auto_columns": null,
-            "margin": null,
-            "display": null,
-            "left": null
-          }
-        },
-        "1eede6c9a1f34d4187e90dbf79da4122": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "DescriptionStyleModel",
-          "model_module_version": "1.5.0",
-          "state": {
-            "_view_name": "StyleView",
-            "_model_name": "DescriptionStyleModel",
-            "description_width": "",
-            "_view_module": "@jupyter-widgets/base",
-            "_model_module_version": "1.5.0",
-            "_view_count": null,
-            "_view_module_version": "1.2.0",
-            "_model_module": "@jupyter-widgets/controls"
-          }
-        },
-        "e66e18de1f3f49a4b3bdb05a9565daa2": {
-          "model_module": "@jupyter-widgets/base",
-          "model_name": "LayoutModel",
-          "model_module_version": "1.2.0",
-          "state": {
-            "_view_name": "LayoutView",
-            "grid_template_rows": null,
-            "right": null,
-            "justify_content": null,
-            "_view_module": "@jupyter-widgets/base",
-            "overflow": null,
-            "_model_module_version": "1.2.0",
-            "_view_count": null,
-            "flex_flow": null,
-            "width": null,
-            "min_width": null,
-            "border": null,
-            "align_items": null,
-            "bottom": null,
-            "_model_module": "@jupyter-widgets/base",
-            "top": null,
-            "grid_column": null,
-            "overflow_y": null,
-            "overflow_x": null,
-            "grid_auto_flow": null,
-            "grid_area": null,
-            "grid_template_columns": null,
-            "flex": null,
-            "_model_name": "LayoutModel",
-            "justify_items": null,
-            "grid_row": null,
-            "max_height": null,
-            "align_content": null,
-            "visibility": null,
-            "align_self": null,
-            "height": null,
-            "min_height": null,
-            "padding": null,
-            "grid_auto_rows": null,
-            "grid_gap": null,
-            "max_width": null,
-            "order": null,
-            "_view_module_version": "1.2.0",
-            "grid_template_areas": null,
-            "object_position": null,
-            "object_fit": null,
-            "grid_auto_columns": null,
-            "margin": null,
-            "display": null,
-            "left": null
-          }
-        }
-      }
     }
   },
   "cells": [
@@ -395,13 +48,13 @@
         "from torch import nn\n",
         "from torch.utils.data import DataLoader, SubsetRandomSampler\n",
         "from torchvision import datasets\n",
-        "from torchvision.transforms import ToTensor, Lambda, Compose\n",
+        "from torchvision.transforms import ToTensor, Compose, Normalize\n",
         "import matplotlib.pyplot as plt\n",
         "import copy\n",
         "import numpy as np\n",
         "from sklearn.model_selection import train_test_split"
       ],
-      "execution_count": 48,
+      "execution_count": 101,
       "outputs": []
     },
     {
@@ -417,24 +70,10 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 100,
-          "referenced_widgets": [
-            "f028bdb354b54e06b2641871ae7dabd4",
-            "da3a981a9e4246f999b4900d346a3c42",
-            "1da3485b610b4a4288dcaac34b3a7f8e",
-            "de66f70715914c77bed0fe546273472d",
-            "513d85614c58494caa75524d4a30dd9e",
-            "63c1746f51df4b09b1df859b0039dd02",
-            "7ab78805f1074cfa83a0035d52c874c9",
-            "4e219f163d804715b6dc838b77867d06",
-            "df2becea944147749078c6257977018b",
-            "1eede6c9a1f34d4187e90dbf79da4122",
-            "e66e18de1f3f49a4b3bdb05a9565daa2"
-          ]
+          "base_uri": "https://localhost:8080/"
         },
         "id": "rfml-mHmP4Z7",
-        "outputId": "25412390-47fc-48a1-c45e-c066de30cb67"
+        "outputId": "4991a608-15bb-446e-e822-8f0029a7fb30"
       },
       "source": [
         "# Load the training data\n",
@@ -442,7 +81,9 @@
         "    root = \"data\",\n",
         "    train = True,\n",
         "    download = True,\n",
-        "    transform = ToTensor()\n",
+        "    transform = Compose([ToTensor(),\n",
+        "                        Normalize([0.5071, 0.4867, 0.4408],\n",
+        "                                  [0.2675, 0.2565, 0.2761])])\n",
         ")\n",
         "\n",
         "# Load the test data\n",
@@ -453,34 +94,13 @@
         "    transform = ToTensor()\n",
         ")"
       ],
-      "execution_count": 44,
+      "execution_count": 105,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Downloading https://www.cs.toronto.edu/~kriz/cifar-100-python.tar.gz to data/cifar-100-python.tar.gz\n"
-          ]
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "f028bdb354b54e06b2641871ae7dabd4",
-              "version_minor": 0,
-              "version_major": 2
-            },
-            "text/plain": [
-              "  0%|          | 0/169001437 [00:00<?, ?it/s]"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Extracting data/cifar-100-python.tar.gz to data\n",
+            "Files already downloaded and verified\n",
             "Files already downloaded and verified\n"
           ]
         }
@@ -494,7 +114,7 @@
       "source": [
         "training_targets = training_data.targets"
       ],
-      "execution_count": 47,
+      "execution_count": 106,
       "outputs": []
     },
     {
@@ -507,7 +127,7 @@
         "    np.arange(len(training_targets)), test_size=0.2, stratify=training_targets\n",
         ")"
       ],
-      "execution_count": 49,
+      "execution_count": 107,
       "outputs": []
     },
     {
@@ -516,7 +136,7 @@
         "id": "TJgFLmWPQ-rU"
       },
       "source": [
-        "batch_size = 64\n",
+        "batch_size = 100\n",
         "\n",
         "# Create data loaders\n",
         "train_dataloader = DataLoader(training_data, batch_size=batch_size,\n",
@@ -525,7 +145,7 @@
         "                              sampler=SubsetRandomSampler(valid_split_index))\n",
         "test_dataloader = DataLoader(test_data, batch_size=batch_size)"
       ],
-      "execution_count": 51,
+      "execution_count": 108,
       "outputs": []
     },
     {
@@ -535,7 +155,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UoIkbJTtRad9",
-        "outputId": "5e84b1d3-5420-4bd5-c9ff-7a8c6ec1a2ab"
+        "outputId": "857bd3a1-a568-4884-8cdc-dad7d4bea29c"
       },
       "source": [
         "# Check that it is splitting the data properly\n",
@@ -554,7 +174,7 @@
         "  test_length += len(y)\n",
         "print(f\"Length of test split: {test_length}\")"
       ],
-      "execution_count": 55,
+      "execution_count": 109,
       "outputs": [
         {
           "output_type": "stream",
@@ -574,7 +194,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DvwjwC3Rv8_X",
-        "outputId": "b608aa3f-9592-47f1-fe78-145df6db8b5c"
+        "outputId": "0d4c95e9-fe4a-4214-9d5a-f562cf754213"
       },
       "source": [
         "# Check that there are 100 instances of each class in the validation set\n",
@@ -586,7 +206,7 @@
         "\n",
         "print(count)"
       ],
-      "execution_count": 60,
+      "execution_count": 110,
       "outputs": [
         {
           "output_type": "stream",
@@ -595,6 +215,17 @@
             "100\n"
           ]
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "od9dSB59eV4g"
+      },
+      "source": [
+        "mean: 'cifar100': (0.5071, 0.4867, 0.4408),\n",
+        "\n",
+        "std: 'cifar100': (0.2675, 0.2565, 0.2761),"
       ]
     },
     {
