--- a/Final Project/vgg.ipynb
+++ b/Final Project/vgg.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "linear_model.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN1y5tE9lDUMmCMTXqOJ7ZZ",
+      "authorship_tag": "ABX9TyM5j0rhJEel2Zx4G1anh0hL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -381,7 +381,7 @@
       },
       "source": [
         "# CSC581B - Introduction to Deep Learning for Image Classification\n",
-        "# Final Project - Linear Classifier"
+        "# Final Project - VGG Network"
       ]
     },
     {
@@ -404,7 +404,7 @@
         "import numpy as np\n",
         "import random"
       ],
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -421,7 +421,7 @@
         "  )\n",
         "])"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -473,7 +473,7 @@
         "    transform = transforms.ToTensor()\n",
         ")"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -515,7 +515,7 @@
       "source": [
         "training_targets = training_data.targets"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -528,7 +528,7 @@
         "    np.arange(len(training_targets)), test_size=0.2, stratify=training_targets\n",
         ")"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -546,7 +546,7 @@
         "                              sampler=SubsetRandomSampler(valid_split_index))\n",
         "test_dataloader = DataLoader(test_data, batch_size=batch_size)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -575,7 +575,7 @@
         "  test_length += len(y)\n",
         "print(f\"Length of test split: {test_length}\")"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -608,7 +608,7 @@
         "\n",
         "print(count)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -641,7 +641,7 @@
         "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
         "print(device)"
       ],
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -676,7 +676,7 @@
         "    x = self.linear_model(x)\n",
         "    return x"
       ],
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -717,7 +717,7 @@
         "  accuracy = num_correct / size\n",
         "  return train_loss, accuracy"
       ],
-      "execution_count": 145,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -744,7 +744,7 @@
         "  print(f\"Validation Error: \\n Validation accuracy: {(100 * accuracy):>0.1f}%, Validation loss: {val_loss:>8f} \\n\")\n",
         "  return val_loss, accuracy"
       ],
-      "execution_count": 146,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -770,7 +770,7 @@
         "  print(f\"Test Error: \\n Accuracy: {(100*correct):>0.1f}%, Avg loss: {test_loss:>8f} \\n\")\n",
         "  return test_loss"
       ],
-      "execution_count": 147,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -848,7 +848,7 @@
         "\n",
         "  return train_losses, train_accuracies, val_losses, val_accuracies"
       ],
-      "execution_count": 148,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -879,7 +879,7 @@
         "\n",
         "  break"
       ],
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -921,7 +921,7 @@
         "\n",
         "  break"
       ],
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -961,7 +961,7 @@
       "source": [
         "n_epochs = 5"
       ],
-      "execution_count": 149,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -989,7 +989,7 @@
         "model_5000 = LinearModel(n_neurons=5000).to(device)\n",
         "print(model_5000)"
       ],
-      "execution_count": 150,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1030,7 +1030,7 @@
         "scheduler_2000 = StepLR(optimizer_2000, step_size=5, gamma=0.1)\n",
         "scheduler_5000 = StepLR(optimizer_5000, step_size=5, gamma=0.1)"
       ],
-      "execution_count": 151,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1046,7 +1046,7 @@
         "train_losses, train_accuracies, val_losses, val_accuracies = training_loop(n_epochs, model_100, train_dataloader, valid_dataloader, batch_size,\n",
         "              loss_fn, optimizer_100, scheduler_100)"
       ],
-      "execution_count": 152,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1126,7 +1126,7 @@
         "plt.legend()\n",
         "plt.show()"
       ],
-      "execution_count": 153,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1162,7 +1162,7 @@
         "plt.legend()\n",
         "plt.show()"
       ],
-      "execution_count": 155,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1191,7 +1191,7 @@
         "train_losses, train_accuracies, val_losses, val_accuracies = training_loop(n_epochs, model_500, train_dataloader, valid_dataloader, batch_size,\n",
         "              loss_fn, optimizer_500, scheduler_500)"
       ],
-      "execution_count": 137,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1421,7 +1421,7 @@
         "plt.legend()\n",
         "plt.show()"
       ],
-      "execution_count": 138,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1468,7 +1468,7 @@
         "train_losses, val_losses = training_loop(n_epochs, model_1000, train_dataloader, valid_dataloader, batch_size,\n",
         "              loss_fn, optimizer_1000, scheduler_1000)"
       ],
-      "execution_count": 139,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1698,7 +1698,7 @@
         "plt.legend()\n",
         "plt.show()"
       ],
-      "execution_count": 140,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1745,7 +1745,7 @@
         "train_losses, val_losses = training_loop(n_epochs, model_2000, train_dataloader, valid_dataloader, batch_size,\n",
         "              loss_fn, optimizer_2000, scheduler_2000)"
       ],
-      "execution_count": 141,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1975,7 +1975,7 @@
         "plt.legend()\n",
         "plt.show()"
       ],
-      "execution_count": 142,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2022,7 +2022,7 @@
         "train_losses, val_losses = training_loop(n_epochs, model_5000, train_dataloader, valid_dataloader, batch_size,\n",
         "              loss_fn, optimizer_5000, scheduler_5000)"
       ],
-      "execution_count": 143,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2252,7 +2252,7 @@
         "plt.legend()\n",
         "plt.show()"
       ],
-      "execution_count": 144,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
